--- a/app/src/main/res/layout/activity_cancelled_notification.xml
+++ b/app/src/main/res/layout/activity_cancelled_notification.xml
@@ -66,7 +66,7 @@
 
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/tvCancelledHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp"
@@ -88,7 +88,7 @@
             android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView12"
+            app:layout_constraintTop_toBottomOf="@+id/tvCancelledHeader"
             app:srcCompat="@drawable/cancelled_notif_icon" />
 
         <LinearLayout
@@ -111,7 +111,7 @@
                 android:text="Reason for Cancelling:" />
 
             <TextView
-                android:id="@+id/tvBookDetailsNotes"
+                android:id="@+id/tvCNotifOrderNotes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
