--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -10,14 +10,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="@color/loginColor"
-        android:orientation="vertical"
-        android:padding="20dp">
+        android:paddingVertical="20dp"
+        android:orientation="vertical">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="30dp"
-            android:paddingBottom="30dp">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="0dp"
