--- a/app/src/main/res/layout/activity_bd_cancelled.xml
+++ b/app/src/main/res/layout/activity_bd_cancelled.xml
@@ -128,6 +128,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearLayout17">
 
                 <TextView
+                    android:id="@+id/tvBDCDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -136,6 +137,7 @@
                     android:textColor="@color/black" />
 
                 <TextView
+                    android:id="@+id/tvBDCTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -172,6 +174,7 @@
                         android:text="Restaurant:"/>
 
                     <TextView
+                        android:id="@+id/tvBDCRestaurantName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -192,6 +195,7 @@
                         android:text="Address:"/>
 
                     <TextView
+                        android:id="@+id/tvBDCRestaurantAddress"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -212,6 +216,7 @@
                         android:text="Order:"/>
 
                     <TextView
+                        android:id="@+id/tvBDCOrderName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -232,6 +237,7 @@
                         android:text="Hours of Stay:"/>
 
                     <TextView
+                        android:id="@+id/tvBDCHoursOfStay"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -249,9 +255,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Senior Citizen/PWD"/>
+                        android:text="Senior Citizen/PWD:"/>
 
                     <TextView
+                        android:id="@+id/tvBDCNumberOfPwd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -272,6 +279,7 @@
                         android:text="Children:"/>
 
                     <TextView
+                        android:id="@+id/tvBDCNumberOfChildren"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -292,6 +300,7 @@
                         android:text="Reward:"/>
 
                     <TextView
+                        android:id="@+id/tvBDCReward"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -309,9 +318,31 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Booking Type"/>
+                        android:text="Reward Claimed:"/>
 
                     <TextView
+                        android:id="@+id/tvBDCRewardClaimed"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/black"
+                        android:text="N/A"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Booking Type:"/>
+
+                    <TextView
+                        android:id="@+id/tvBDCBookingType"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -330,9 +361,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Notes"/>
+                        android:text="Notes:"/>
 
                     <TextView
+                        android:id="@+id/tvBDCNotes"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -352,9 +384,10 @@
                     android:layout_width="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:layout_height="wrap_content"
-                    android:text="Reason"/>
+                    android:text="Reason for cancellation:"/>
 
                 <TextView
+                    android:id="@+id/tvBDCReason"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
