--- a/app/src/main/res/layout/lists_of_transactions.xml
+++ b/app/src/main/res/layout/lists_of_transactions.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/circleImageView"
+        android:id="@+id/ivBHLRLogo"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginLeft="20dp"
@@ -17,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView41"
+        android:id="@+id/tvBHLRRName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -26,39 +25,39 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/textView45"
-        app:layout_constraintStart_toEndOf="@+id/circleImageView"
-        app:layout_constraintTop_toTopOf="@+id/circleImageView" />
+        app:layout_constraintEnd_toStartOf="@+id/tvBHLType"
+        app:layout_constraintStart_toEndOf="@+id/ivBHLRLogo"
+        app:layout_constraintTop_toTopOf="@+id/ivBHLRLogo" />
 
     <TextView
-        android:id="@+id/textView42"
+        android:id="@+id/tvBHLRAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat"
         android:text="Morayta, Metro Manila"
-        app:layout_constraintEnd_toEndOf="@+id/textView41"
-        app:layout_constraintStart_toStartOf="@+id/textView41"
-        app:layout_constraintTop_toBottomOf="@+id/textView41" />
+        app:layout_constraintEnd_toEndOf="@+id/tvBHLRRName"
+        app:layout_constraintStart_toStartOf="@+id/tvBHLRRName"
+        app:layout_constraintTop_toBottomOf="@+id/tvBHLRRName" />
 
     <TextView
-        android:id="@+id/textView43"
+        android:id="@+id/tvBHLDate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat"
         android:text="April 28, 2021"
-        app:layout_constraintEnd_toEndOf="@+id/textView42"
-        app:layout_constraintStart_toStartOf="@+id/textView42"
-        app:layout_constraintTop_toBottomOf="@+id/textView42" />
+        app:layout_constraintEnd_toEndOf="@+id/tvBHLRAddress"
+        app:layout_constraintStart_toStartOf="@+id/tvBHLRAddress"
+        app:layout_constraintTop_toBottomOf="@+id/tvBHLRAddress" />
 
     <TextView
-        android:id="@+id/textView45"
+        android:id="@+id/tvBHLType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/montserrat"
         android:layout_marginRight="20dp"
+        android:fontFamily="@font/montserrat"
         android:text="No Show"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/circleImageView" />
+        app:layout_constraintTop_toTopOf="@+id/tvBHLRRName" />
 
     <View
         android:id="@+id/view11"
